hard-gists/8585400/run.log
=== Docker Run Log for 8585400 ===
Started at: Mi 29. Okt 17:51:00 CET 2025

[2025-10-29 17:51:00] START: Running container for 8585400
[2025-10-29 17:51:00] SUCCESS: Container 6eb14820f5ed0cc76ccfe908de4db5e1231abf0ffbe2b075de39ecd8b7fb8c36 started for 8585400
=== Container logs for 8585400 ===
  File "/snippet.py", line 15
    print 'Image Saved'
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8585400 ===
[2025-10-29 17:51:02] INFO: Container 6eb14820f5ed0cc76ccfe908de4db5e1231abf0ffbe2b075de39ecd8b7fb8c36 has stopped
